--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: APS-PD communications
+title: APS-AD communications
 
 # Your name to show in the footer
-author: APS-PD communications
+author: APS-AD communications
 
 # --- List of links in the navigation bar --- #
 
