--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author: APS-AD communications
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/Picture1.png"
+# avatar: "/assets/img/Picture1.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
