--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,11 @@ author: APS-AD communications
 
 # --- List of links in the navigation bar --- #
 
+navbar-links:
+  Home: "/"
+  Abstracts: "abstracts"
+
+
 # navbar-links:
 #   About Me: "aboutme"
 #   Resources:
